@@ -69,6 +69,8 @@ public class JUnitTest extends BaseTest implements Cloneable {
 
     private long runTime;
 
+    private int antThreadID;
+
     // Snapshot of the system properties
     private Properties props = null;
 
@@ -93,9 +95,9 @@ public class JUnitTest extends BaseTest implements Cloneable {
      */
     public JUnitTest(String name, boolean haltOnError, boolean haltOnFailure,
             boolean filtertrace) {
-        this(name, haltOnError, haltOnFailure, filtertrace, null);
-    }    
-    
+        this(name, haltOnError, haltOnFailure, filtertrace, null, 0);
+    }
+
     /**
      * Constructor with options.
      * @param name the name of the test.
@@ -107,12 +109,28 @@ public class JUnitTest extends BaseTest implements Cloneable {
      */
     public JUnitTest(String name, boolean haltOnError, boolean haltOnFailure,
                      boolean filtertrace, String[] methods) {
+        this(name, haltOnError, haltOnFailure, filtertrace, methods, 0);    
+    }
+
+    /**
+     * Constructor with options.
+     * @param name the name of the test.
+     * @param haltOnError if true halt the tests if there is an error.
+     * @param haltOnFailure if true halt the tests if there is a failure.
+     * @param filtertrace if true filter stack traces.
+     * @param methods if non-null run only these test methods
+     * @param thread Ant thread ID in which test is currently running
+     * @since 1.9.4
+     */
+    public JUnitTest(String name, boolean haltOnError, boolean haltOnFailure,
+                     boolean filtertrace, String[] methods, int thread) {
         this.name  = name;
         this.haltOnError = haltOnError;
         this.haltOnFail = haltOnFailure;
         this.filtertrace = filtertrace;
         this.methodsSpecified = methods != null;
         this.methods = methodsSpecified ? (String[]) methods.clone() : null;
+        this.antThreadID = thread;
     }
 
     /**
@@ -146,6 +164,17 @@ public class JUnitTest extends BaseTest implements Cloneable {
      */
     public void setName(String value) {
         name = value;
+    }
+
+    /**
+     * Set the thread id
+     * @param thread the Ant id of the thread running this test
+	 * (this is not the system process or thread id)
+     * (this will be 0 in single-threaded mode).
+     * @since Ant 1.9.4
+     */
+    public void setThread(int thread) {
+        this.antThreadID = thread;
     }
 
     /**
@@ -345,6 +374,14 @@ public class JUnitTest extends BaseTest implements Cloneable {
      */
     public String getName() {
         return name;
+    }
+
+    /**
+     * Get the Ant id of the thread running the test.
+     * @return the thread id
+     */
+    public int getThread() {
+        return antThreadID;
     }
 
     /**
